[package]
name = "g1024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "g1024"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
test = []

[dependencies]
wasm-bindgen = "0.2.87"
zkwasm-rust-sdk = { path = "../../zkWasm-rust" }
bytemuck = "1.14.0"
